// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionButtons component loads and displays Question Buttons comoponent 1`] = `
<div
  className="question-buttons"
>
  <button>
    MORE ANSWERED QUESTIONS
  </button>
  <button>
    ADD A QUESTION +
  </button>
</div>
`;

exports[`Questions widget component loads and displays questions widget comoponent 1`] = `
<div
  className="questionsWidget"
>
  <h6>
    QUESTIONS & ANSWERS
  </h6>
  <div>
    <input
      id="questionsSearchBar"
      placeholder="HAVE A QUESTION? SEARCH FOR ANSWERS..."
      type="search"
    />
  </div>
  <p>
    REPLACE WITH QUESTIONSLIST COMPONENT
  </p>
  <div
    className="question-buttons"
  >
    <button>
      MORE ANSWERED QUESTIONS
    </button>
    <button>
      ADD A QUESTION +
    </button>
  </div>
</div>
`;
